[package]
name = "pf2e-astar"
version = "2.1.0"
authors = ["7H3LaughingMan"]
edition = "2021"
description = "PF2e Foundry Pathfinding WebAssembly"
repository = "https://github.com/7H3LaughingMan/pf2e-astar"
license = "MIT"

[profile.release]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive", "extern_crate_alloc"] }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
pathfinding = "4.10.0"
rapier2d = "0.22.0"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.92" }
web-sys = { version = "0.3.69", features = ["console"] }
